--- a/project-SACMS/src/main/resources/com/main/projectsacms/FXML Files/Attendance/AttendancePage.fxml
+++ b/project-SACMS/src/main/resources/com/main/projectsacms/FXML Files/Attendance/AttendancePage.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
@@ -12,7 +13,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.main.projectsacms.AttendanceTrackingController">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.main.projectsacms.AttendanceTracking.AttendanceTrackingController">
    <children>
       <Pane prefHeight="39.0" prefWidth="1283.0" style="-fx-background-color: #75e3eb;">
          <children>
@@ -77,65 +78,147 @@
             <Font name="Calibri Bold" size="17.0" />
          </font>
       </Label>
-      <Rectangle arcHeight="40.0" arcWidth="40.0" fill="#1b2b32" height="119.0" layoutX="209.0" layoutY="173.0" stroke="BLACK" strokeType="INSIDE" width="874.0" />
-      <TextField layoutX="408.0" layoutY="198.0" prefHeight="25.0" prefWidth="396.0" />
-      <ChoiceBox layoutX="314.0" layoutY="253.0" prefHeight="25.0" prefWidth="174.0" />
-      <Button layoutX="914.0" layoutY="213.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="83.0" text="Filter" />
-      <Label layoutX="421.0" layoutY="178.0" prefHeight="17.0" prefWidth="68.0" text="Search" textFill="WHITE">
-         <font>
-            <Font name="System Bold" size="14.0" />
-         </font>
-      </Label>
-      <Label layoutX="314.0" layoutY="232.0" prefHeight="17.0" prefWidth="68.0" text="Club" textFill="WHITE">
-         <font>
-            <Font name="System Bold" size="14.0" />
-         </font>
-      </Label>
-      <DatePicker layoutX="507.0" layoutY="253.0" />
-      <DatePicker layoutX="702.0" layoutY="253.0" />
-      <Label layoutX="507.0" layoutY="232.0" prefHeight="17.0" prefWidth="68.0" text="From" textFill="WHITE">
-         <font>
-            <Font name="System Bold" size="14.0" />
-         </font>
-      </Label>
-      <Label layoutX="702.0" layoutY="232.0" prefHeight="17.0" prefWidth="68.0" text="To" textFill="WHITE">
-         <font>
-            <Font name="System Bold" size="14.0" />
-         </font>
-      </Label>
-      <Button fx:id="switchToPageOneButton" layoutX="907.0" layoutY="660.0" mnemonicParsing="false" onAction="#switchToPageOne" prefHeight="25.0" prefWidth="26.0" text="1" />
-      <Button fx:id="switchToPageFourButton" layoutX="1004.0" layoutY="660.0" mnemonicParsing="false" onAction="#switchToPageFour" prefHeight="25.0" prefWidth="26.0" text="4" />
-      <Button fx:id="switchToPageTwoButton" layoutX="939.0" layoutY="660.0" mnemonicParsing="false" onAction="#switchToPageTwo" prefHeight="25.0" prefWidth="26.0" text="2" />
-      <Button fx:id="switchToPageThreeButton" layoutX="971.0" layoutY="660.0" mnemonicParsing="false" onAction="#switchToPageThree" prefHeight="25.0" prefWidth="26.0" text="3" />
-      <Button fx:id="changePageToLeftButton" layoutX="876.0" layoutY="660.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="26.0" text="&lt;" />
-      <Button fx:id="changePageToRightButton" layoutX="1036.0" layoutY="660.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="26.0" text="&gt;" />
-      <AnchorPane fx:id="EventsDisplayPageOne" layoutX="214.0" layoutY="301.0" prefHeight="354.0" prefWidth="874.0">
+      <Group fx:id="studentsGroup" layoutX="219.0" layoutY="183.0" visible="false">
          <children>
-            <Pane fx:id="PageOneSubEventPaneOne" layoutX="14.0" layoutY="6.0" prefHeight="98.0" prefWidth="860.0" />
-            <Pane fx:id="PageOneSubEventPaneTwo" layoutX="14.0" layoutY="128.0" prefHeight="98.0" prefWidth="860.0" />
-            <Pane fx:id="PageOneSubEventPaneThree" layoutX="14.0" layoutY="242.0" prefHeight="98.0" prefWidth="860.0" />
+            <Rectangle arcHeight="40.0" arcWidth="40.0" fill="#1b2b32" height="403.0" layoutX="-46.0" layoutY="55.0" stroke="BLACK" strokeType="INSIDE" width="940.0" />
+            <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#287264" height="53.0" layoutX="-47.0" layoutY="57.0" stroke="#287264" strokeType="INSIDE" width="943.0" />
+            <TextField layoutX="241.0" layoutY="15.0" prefHeight="25.0" prefWidth="396.0" />
+            <Label layoutX="241.0" layoutY="-8.0" prefHeight="17.0" prefWidth="68.0" text="Search" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="1.0" layoutY="70.0" prefHeight="27.0" prefWidth="99.0" text="Student ID" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </Label>
+            <Label layoutX="181.0" layoutY="70.0" prefHeight="27.0" prefWidth="119.0" text="Student Name" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </Label>
+            <Label layoutX="396.0" layoutY="70.0" prefHeight="27.0" prefWidth="57.0" text="Grade" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </Label>
+            <Label layoutX="637.0" layoutY="70.0" prefHeight="27.0" prefWidth="103.0" text="Attendented" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </Label>
+            <Label layoutX="779.0" layoutY="70.0" prefHeight="27.0" prefWidth="103.0" text="Logged Time" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </Label>
+            <Rectangle arcHeight="20.0" arcWidth="20.0" fill="WHITE" height="53.0" layoutX="-47.0" layoutY="118.0" stroke="BLACK" strokeType="INSIDE" width="943.0" />
+            <Rectangle arcHeight="20.0" arcWidth="20.0" fill="WHITE" height="53.0" layoutX="-47.0" layoutY="176.0" stroke="BLACK" strokeType="INSIDE" width="943.0" />
+            <Rectangle arcHeight="20.0" arcWidth="20.0" fill="WHITE" height="53.0" layoutX="-47.0" layoutY="234.0" stroke="BLACK" strokeType="INSIDE" width="943.0" />
+            <Rectangle arcHeight="20.0" arcWidth="20.0" fill="WHITE" height="53.0" layoutX="-47.0" layoutY="291.0" stroke="BLACK" strokeType="INSIDE" width="943.0" />
+            <Rectangle arcHeight="20.0" arcWidth="20.0" fill="WHITE" height="53.0" layoutX="-47.0" layoutY="349.0" stroke="BLACK" strokeType="INSIDE" width="943.0" />
+            <Rectangle arcHeight="20.0" arcWidth="20.0" fill="WHITE" height="53.0" layoutX="-47.0" layoutY="406.0" stroke="BLACK" strokeType="INSIDE" width="943.0" />
+            <Rectangle arcHeight="20.0" arcWidth="20.0" height="50.0" layoutX="1.0" layoutY="-3.0" stroke="WHITE" strokeType="INSIDE" width="191.0" />
+            <Label fx:id="eventTypeLabel" layoutX="8.0" layoutY="5.0" prefHeight="35.0" prefWidth="171.0" text="Physical Events" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="24.0" />
+               </font>
+            </Label>
+            <ImageView fitHeight="26.0" fitWidth="22.0" layoutX="612.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../Icons/Functional/search.png" />
+               </image>
+            </ImageView>
+            <Group fx:id="studentsPageOne1" layoutX="-51.0" layoutY="115.0">
+               <children>
+                  <Pane fx:id="StudentDetailsPaneTwo" layoutX="5.0" layoutY="58.0" prefHeight="59.0" prefWidth="947.0" />
+                  <Pane fx:id="StudentDetailsPaneThree" layoutY="116.0" prefHeight="59.0" prefWidth="947.0" />
+                  <Pane fx:id="StudentDetailsPaneFour" layoutY="173.0" prefHeight="59.0" prefWidth="947.0" />
+                  <Pane fx:id="StudentDetailsPaneFive" layoutX="2.0" layoutY="231.0" prefHeight="59.0" prefWidth="947.0" />
+                  <Pane fx:id="StudentDetailsPaneSix" layoutY="288.0" prefHeight="59.0" prefWidth="947.0" />
+                  <Pane fx:id="StudentDetailsPaneOne" prefHeight="59.0" prefWidth="947.0" />
+                  <Rectangle arcHeight="20.0" arcWidth="20.0" height="408.0" layoutX="159.0" layoutY="-59.0" stroke="BLACK" strokeType="INSIDE" width="5.0" />
+                  <Rectangle arcHeight="20.0" arcWidth="20.0" height="403.0" layoutX="415.0" layoutY="-59.0" stroke="BLACK" strokeType="INSIDE" width="5.0" />
+                  <Rectangle arcHeight="20.0" arcWidth="20.0" height="403.0" layoutX="528.0" layoutY="-59.0" stroke="BLACK" strokeType="INSIDE" width="5.0" />
+                  <Rectangle arcHeight="20.0" arcWidth="20.0" height="403.0" layoutX="661.0" layoutY="-59.0" stroke="BLACK" strokeType="INSIDE" width="5.0" />
+                  <Rectangle arcHeight="20.0" arcWidth="20.0" height="403.0" layoutX="799.0" layoutY="-59.0" stroke="BLACK" strokeType="INSIDE" width="5.0" />
+               </children>
+            </Group>
+            <Label layoutX="505.0" layoutY="72.0" prefHeight="27.0" prefWidth="100.0" text="Registered" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </Label>
          </children>
-      </AnchorPane>
-      <AnchorPane fx:id="EventsDisplayPageTwo" layoutX="214.0" layoutY="301.0" prefHeight="354.0" prefWidth="874.0" visible="false">
+      </Group>
+      <Group fx:id="eventsGroup" layoutX="209.0" layoutY="173.0">
          <children>
-            <Pane fx:id="PageTwoSubEventPaneOne" layoutX="14.0" layoutY="6.0" prefHeight="98.0" prefWidth="860.0" />
-            <Pane fx:id="PageTwoSubEventPaneTwo" layoutX="14.0" layoutY="128.0" prefHeight="98.0" prefWidth="860.0" />
-            <Pane fx:id="PageTwoSubEventPaneThree" layoutX="14.0" layoutY="242.0" prefHeight="98.0" prefWidth="860.0" />
+            <Group>
+               <children>
+                  <Rectangle arcHeight="40.0" arcWidth="40.0" fill="#1b2b32" height="119.0" stroke="BLACK" strokeType="INSIDE" width="874.0" />
+                  <TextField layoutX="199.0" layoutY="25.0" prefHeight="25.0" prefWidth="396.0" />
+                  <ChoiceBox layoutX="105.0" layoutY="80.0" prefHeight="25.0" prefWidth="174.0" />
+                  <Button layoutX="705.0" layoutY="40.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="83.0" text="Filter" />
+                  <Label layoutX="212.0" layoutY="5.0" prefHeight="17.0" prefWidth="68.0" text="Search" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="105.0" layoutY="59.0" prefHeight="17.0" prefWidth="68.0" text="Club" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Label>
+                  <DatePicker layoutX="298.0" layoutY="80.0" />
+                  <DatePicker layoutX="493.0" layoutY="80.0" />
+                  <Label layoutX="298.0" layoutY="59.0" prefHeight="17.0" prefWidth="68.0" text="From" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="493.0" layoutY="59.0" prefHeight="17.0" prefWidth="68.0" text="To" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Label>
+               </children>
+            </Group>
+            <AnchorPane fx:id="EventsDisplayPageOne" layoutX="5.0" layoutY="128.0" prefHeight="354.0" prefWidth="874.0">
+               <children>
+                  <Pane fx:id="PageOneSubEventPaneOne" layoutX="14.0" layoutY="6.0" onMouseClicked="#eventOneOnClick" prefHeight="98.0" prefWidth="860.0" />
+                  <Pane fx:id="PageOneSubEventPaneTwo" layoutX="14.0" layoutY="128.0" onMouseClicked="#eventTwoOnClick" prefHeight="98.0" prefWidth="860.0" />
+                  <Pane fx:id="PageOneSubEventPaneThree" layoutX="14.0" layoutY="242.0" onMouseClicked="#eventThreeOnClick" prefHeight="98.0" prefWidth="860.0" />
+               </children>
+            </AnchorPane>
+            <AnchorPane fx:id="EventsDisplayPageTwo" layoutX="5.0" layoutY="128.0" prefHeight="354.0" prefWidth="874.0" visible="false">
+               <children>
+                  <Pane fx:id="PageTwoSubEventPaneOne" layoutX="14.0" layoutY="6.0" onMouseClicked="#eventFourOnClick" prefHeight="98.0" prefWidth="860.0" />
+                  <Pane fx:id="PageTwoSubEventPaneTwo" layoutX="14.0" layoutY="128.0" onMouseClicked="#eventFiveOnClick" prefHeight="98.0" prefWidth="860.0" />
+                  <Pane fx:id="PageTwoSubEventPaneThree" layoutX="14.0" layoutY="242.0" onMouseClicked="#eventSixOnClick" prefHeight="98.0" prefWidth="860.0" />
+               </children>
+            </AnchorPane>
+            <AnchorPane fx:id="EventsDisplayPageThree" layoutX="5.0" layoutY="128.0" prefHeight="354.0" prefWidth="874.0" visible="false">
+               <children>
+                  <Pane fx:id="PageThreeSubEventPaneOne" layoutX="14.0" layoutY="6.0" onMouseClicked="#eventSevenOnClick" prefHeight="98.0" prefWidth="860.0" />
+                  <Pane fx:id="PageThreeSubEventPaneTwo" layoutX="14.0" layoutY="128.0" onMouseClicked="#eventEightOnClick" prefHeight="98.0" prefWidth="860.0" />
+                  <Pane fx:id="PageThreeSubEventPaneThree" layoutX="14.0" layoutY="242.0" onMouseClicked="#eventNineOnClick" prefHeight="98.0" prefWidth="860.0" />
+               </children>
+            </AnchorPane>
+            <AnchorPane fx:id="EventsDisplayPageFour" layoutX="5.0" layoutY="128.0" prefHeight="354.0" prefWidth="874.0" visible="false">
+               <children>
+                  <Pane fx:id="PageFourSubEventPaneOne" layoutX="14.0" layoutY="6.0" onMouseClicked="#eventTenOnClick" prefHeight="98.0" prefWidth="860.0" />
+                  <Pane fx:id="PageFourSubEventPaneTwo" layoutX="14.0" layoutY="128.0" onMouseClicked="#eventElevenOnClick" prefHeight="98.0" prefWidth="860.0" />
+                  <Pane fx:id="PageFourSubEventPaneThree" layoutX="14.0" layoutY="242.0" onMouseClicked="#eventTwelveOnClick" prefHeight="98.0" prefWidth="860.0" />
+               </children>
+            </AnchorPane>
          </children>
-      </AnchorPane>
-      <AnchorPane fx:id="EventsDisplayPageThree" layoutX="214.0" layoutY="301.0" prefHeight="354.0" prefWidth="874.0" visible="false">
-         <children>
-            <Pane fx:id="PageThreeSubEventPaneOne" layoutX="14.0" layoutY="6.0" prefHeight="98.0" prefWidth="860.0" />
-            <Pane fx:id="PageThreeSubEventPaneTwo" layoutX="14.0" layoutY="128.0" prefHeight="98.0" prefWidth="860.0" />
-            <Pane fx:id="PageThreeSubEventPaneThree" layoutX="14.0" layoutY="242.0" prefHeight="98.0" prefWidth="860.0" />
-         </children>
-      </AnchorPane>
-      <AnchorPane fx:id="EventsDisplayPageFour" layoutX="214.0" layoutY="301.0" prefHeight="354.0" prefWidth="874.0" visible="false">
-         <children>
-            <Pane fx:id="PageFourSubEventPaneOne" layoutX="14.0" layoutY="6.0" prefHeight="98.0" prefWidth="860.0" />
-            <Pane fx:id="PageFourSubEventPaneTwo" layoutX="14.0" layoutY="128.0" prefHeight="98.0" prefWidth="860.0" />
-            <Pane fx:id="PageFourSubEventPaneThree" layoutX="14.0" layoutY="242.0" prefHeight="98.0" prefWidth="860.0" />
-         </children>
-      </AnchorPane>
+      </Group>
+      <Button fx:id="switchToPageOneButton" layoutX="944.0" layoutY="661.0" mnemonicParsing="false" onAction="#switchToPageOne" prefHeight="25.0" prefWidth="26.0" text="1" />
+      <Button fx:id="switchToPageFourButton" layoutX="1041.0" layoutY="661.0" mnemonicParsing="false" onAction="#switchToPageFour" prefHeight="25.0" prefWidth="26.0" text="4" />
+      <Button fx:id="switchToPageTwoButton" layoutX="976.0" layoutY="661.0" mnemonicParsing="false" onAction="#switchToPageTwo" prefHeight="25.0" prefWidth="26.0" text="2" />
+      <Button fx:id="switchToPageThreeButton" layoutX="1008.0" layoutY="661.0" mnemonicParsing="false" onAction="#switchToPageThree" prefHeight="25.0" prefWidth="26.0" text="3" />
+      <Button fx:id="changePageToLeftButton" layoutX="913.0" layoutY="661.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="26.0" text="&lt;" />
+      <Button fx:id="changePageToRightButton" layoutX="1073.0" layoutY="661.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="26.0" text="&gt;" />
    </children>
 </AnchorPane>
