--- a/project-SACMS/src/main/resources/com/main/projectsacms/FXML Files/Attendance/AttendancePage.fxml
+++ b/project-SACMS/src/main/resources/com/main/projectsacms/FXML Files/Attendance/AttendancePage.fxml
@@ -78,6 +78,68 @@
             <Font name="Calibri Bold" size="17.0" />
          </font>
       </Label>
+      <Group fx:id="eventsGroup" layoutX="209.0" layoutY="173.0">
+         <children>
+            <Group>
+               <children>
+                  <Rectangle arcHeight="40.0" arcWidth="40.0" fill="#1b2b32" height="119.0" stroke="BLACK" strokeType="INSIDE" width="874.0" />
+                  <TextField layoutX="199.0" layoutY="25.0" prefHeight="25.0" prefWidth="396.0" />
+                  <ChoiceBox layoutX="105.0" layoutY="80.0" prefHeight="25.0" prefWidth="174.0" />
+                  <Button layoutX="705.0" layoutY="40.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="83.0" text="Filter" />
+                  <Label layoutX="212.0" layoutY="5.0" prefHeight="17.0" prefWidth="68.0" text="Search" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="105.0" layoutY="59.0" prefHeight="17.0" prefWidth="68.0" text="Club" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Label>
+                  <DatePicker layoutX="298.0" layoutY="80.0" />
+                  <DatePicker layoutX="493.0" layoutY="80.0" />
+                  <Label layoutX="298.0" layoutY="59.0" prefHeight="17.0" prefWidth="68.0" text="From" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="493.0" layoutY="59.0" prefHeight="17.0" prefWidth="68.0" text="To" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Label>
+               </children>
+            </Group>
+            <AnchorPane fx:id="EventsDisplayPageOne" layoutX="5.0" layoutY="128.0" prefHeight="354.0" prefWidth="874.0">
+               <children>
+                  <Pane fx:id="PageOneSubEventPaneOne" layoutX="14.0" layoutY="6.0" onMouseClicked="#eventOneOnClick" prefHeight="98.0" prefWidth="860.0" />
+                  <Pane fx:id="PageOneSubEventPaneTwo" layoutX="14.0" layoutY="128.0" onMouseClicked="#eventTwoOnClick" prefHeight="98.0" prefWidth="860.0" />
+                  <Pane fx:id="PageOneSubEventPaneThree" layoutX="14.0" layoutY="242.0" onMouseClicked="#eventThreeOnClick" prefHeight="98.0" prefWidth="860.0" />
+               </children>
+            </AnchorPane>
+            <AnchorPane fx:id="EventsDisplayPageTwo" layoutX="5.0" layoutY="128.0" prefHeight="354.0" prefWidth="874.0" visible="false">
+               <children>
+                  <Pane fx:id="PageTwoSubEventPaneOne" layoutX="14.0" layoutY="6.0" onMouseClicked="#eventFourOnClick" prefHeight="98.0" prefWidth="860.0" />
+                  <Pane fx:id="PageTwoSubEventPaneTwo" layoutX="14.0" layoutY="128.0" onMouseClicked="#eventFiveOnClick" prefHeight="98.0" prefWidth="860.0" />
+                  <Pane fx:id="PageTwoSubEventPaneThree" layoutX="14.0" layoutY="242.0" onMouseClicked="#eventSixOnClick" prefHeight="98.0" prefWidth="860.0" />
+               </children>
+            </AnchorPane>
+            <AnchorPane fx:id="EventsDisplayPageThree" layoutX="5.0" layoutY="128.0" prefHeight="354.0" prefWidth="874.0" visible="false">
+               <children>
+                  <Pane fx:id="PageThreeSubEventPaneOne" layoutX="14.0" layoutY="6.0" onMouseClicked="#eventSevenOnClick" prefHeight="98.0" prefWidth="860.0" />
+                  <Pane fx:id="PageThreeSubEventPaneTwo" layoutX="14.0" layoutY="128.0" onMouseClicked="#eventEightOnClick" prefHeight="98.0" prefWidth="860.0" />
+                  <Pane fx:id="PageThreeSubEventPaneThree" layoutX="14.0" layoutY="242.0" onMouseClicked="#eventNineOnClick" prefHeight="98.0" prefWidth="860.0" />
+               </children>
+            </AnchorPane>
+            <AnchorPane fx:id="EventsDisplayPageFour" layoutX="5.0" layoutY="128.0" prefHeight="354.0" prefWidth="874.0" visible="false">
+               <children>
+                  <Pane fx:id="PageFourSubEventPaneOne" layoutX="14.0" layoutY="6.0" onMouseClicked="#eventTenOnClick" prefHeight="98.0" prefWidth="860.0" />
+                  <Pane fx:id="PageFourSubEventPaneTwo" layoutX="14.0" layoutY="128.0" onMouseClicked="#eventElevenOnClick" prefHeight="98.0" prefWidth="860.0" />
+                  <Pane fx:id="PageFourSubEventPaneThree" layoutX="14.0" layoutY="242.0" onMouseClicked="#eventTwelveOnClick" prefHeight="98.0" prefWidth="860.0" />
+               </children>
+            </AnchorPane>
+         </children>
+      </Group>
       <Group fx:id="studentsGroup" layoutX="219.0" layoutY="183.0" visible="false">
          <children>
             <Rectangle arcHeight="40.0" arcWidth="40.0" fill="#1b2b32" height="403.0" layoutX="-46.0" layoutY="55.0" stroke="BLACK" strokeType="INSIDE" width="940.0" />
@@ -150,68 +212,8 @@
                   <Font name="System Bold" size="15.0" />
                </font>
             </Label>
-         </children>
-      </Group>
-      <Group fx:id="eventsGroup" layoutX="209.0" layoutY="173.0">
-         <children>
-            <Group>
-               <children>
-                  <Rectangle arcHeight="40.0" arcWidth="40.0" fill="#1b2b32" height="119.0" stroke="BLACK" strokeType="INSIDE" width="874.0" />
-                  <TextField layoutX="199.0" layoutY="25.0" prefHeight="25.0" prefWidth="396.0" />
-                  <ChoiceBox layoutX="105.0" layoutY="80.0" prefHeight="25.0" prefWidth="174.0" />
-                  <Button layoutX="705.0" layoutY="40.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="83.0" text="Filter" />
-                  <Label layoutX="212.0" layoutY="5.0" prefHeight="17.0" prefWidth="68.0" text="Search" textFill="WHITE">
-                     <font>
-                        <Font name="System Bold" size="14.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="105.0" layoutY="59.0" prefHeight="17.0" prefWidth="68.0" text="Club" textFill="WHITE">
-                     <font>
-                        <Font name="System Bold" size="14.0" />
-                     </font>
-                  </Label>
-                  <DatePicker layoutX="298.0" layoutY="80.0" />
-                  <DatePicker layoutX="493.0" layoutY="80.0" />
-                  <Label layoutX="298.0" layoutY="59.0" prefHeight="17.0" prefWidth="68.0" text="From" textFill="WHITE">
-                     <font>
-                        <Font name="System Bold" size="14.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="493.0" layoutY="59.0" prefHeight="17.0" prefWidth="68.0" text="To" textFill="WHITE">
-                     <font>
-                        <Font name="System Bold" size="14.0" />
-                     </font>
-                  </Label>
-               </children>
-            </Group>
-            <AnchorPane fx:id="EventsDisplayPageOne" layoutX="5.0" layoutY="128.0" prefHeight="354.0" prefWidth="874.0">
-               <children>
-                  <Pane fx:id="PageOneSubEventPaneOne" layoutX="14.0" layoutY="6.0" onMouseClicked="#eventOneOnClick" prefHeight="98.0" prefWidth="860.0" />
-                  <Pane fx:id="PageOneSubEventPaneTwo" layoutX="14.0" layoutY="128.0" onMouseClicked="#eventTwoOnClick" prefHeight="98.0" prefWidth="860.0" />
-                  <Pane fx:id="PageOneSubEventPaneThree" layoutX="14.0" layoutY="242.0" onMouseClicked="#eventThreeOnClick" prefHeight="98.0" prefWidth="860.0" />
-               </children>
-            </AnchorPane>
-            <AnchorPane fx:id="EventsDisplayPageTwo" layoutX="5.0" layoutY="128.0" prefHeight="354.0" prefWidth="874.0" visible="false">
-               <children>
-                  <Pane fx:id="PageTwoSubEventPaneOne" layoutX="14.0" layoutY="6.0" onMouseClicked="#eventFourOnClick" prefHeight="98.0" prefWidth="860.0" />
-                  <Pane fx:id="PageTwoSubEventPaneTwo" layoutX="14.0" layoutY="128.0" onMouseClicked="#eventFiveOnClick" prefHeight="98.0" prefWidth="860.0" />
-                  <Pane fx:id="PageTwoSubEventPaneThree" layoutX="14.0" layoutY="242.0" onMouseClicked="#eventSixOnClick" prefHeight="98.0" prefWidth="860.0" />
-               </children>
-            </AnchorPane>
-            <AnchorPane fx:id="EventsDisplayPageThree" layoutX="5.0" layoutY="128.0" prefHeight="354.0" prefWidth="874.0" visible="false">
-               <children>
-                  <Pane fx:id="PageThreeSubEventPaneOne" layoutX="14.0" layoutY="6.0" onMouseClicked="#eventSevenOnClick" prefHeight="98.0" prefWidth="860.0" />
-                  <Pane fx:id="PageThreeSubEventPaneTwo" layoutX="14.0" layoutY="128.0" onMouseClicked="#eventEightOnClick" prefHeight="98.0" prefWidth="860.0" />
-                  <Pane fx:id="PageThreeSubEventPaneThree" layoutX="14.0" layoutY="242.0" onMouseClicked="#eventNineOnClick" prefHeight="98.0" prefWidth="860.0" />
-               </children>
-            </AnchorPane>
-            <AnchorPane fx:id="EventsDisplayPageFour" layoutX="5.0" layoutY="128.0" prefHeight="354.0" prefWidth="874.0" visible="false">
-               <children>
-                  <Pane fx:id="PageFourSubEventPaneOne" layoutX="14.0" layoutY="6.0" onMouseClicked="#eventTenOnClick" prefHeight="98.0" prefWidth="860.0" />
-                  <Pane fx:id="PageFourSubEventPaneTwo" layoutX="14.0" layoutY="128.0" onMouseClicked="#eventElevenOnClick" prefHeight="98.0" prefWidth="860.0" />
-                  <Pane fx:id="PageFourSubEventPaneThree" layoutX="14.0" layoutY="242.0" onMouseClicked="#eventTwelveOnClick" prefHeight="98.0" prefWidth="860.0" />
-               </children>
-            </AnchorPane>
+            <Button fx:id="onSaveButtonClick" layoutX="727.0" layoutY="16.0" mnemonicParsing="false" onAction="#saveButtonOnClick" text="Save" />
+            <Button fx:id="onSaveButtonClick1" layoutX="788.0" layoutY="12.0" mnemonicParsing="false" onAction="#saveButtonOnClick" text="Reset" />
          </children>
       </Group>
       <Button fx:id="switchToPageOneButton" layoutX="944.0" layoutY="661.0" mnemonicParsing="false" onAction="#switchToPageOne" prefHeight="25.0" prefWidth="26.0" text="1" />
